--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.7",
     "nuxt": "^3.13.2",
+    "three": "^0.174.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "sass-embedded": "^1.85.1",
     "tailwindcss": "^3.4.14"
   }
 }
